--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
                     <a href="https://www.linkedin.com/in/manasi-s-j-a9b4a9214/"><i class="fa-brands fa-linkedin"></i></a>
                     <a href="https://github.com/Manasi061001"><i class="fa-brands fa-github"></i></a>
                 </div>
-                <a href="https://drive.google.com/file/d/1b67MKqEZO2hpEAp22jZUJmnBN8s71LXE/view?usp=drivesdk" class="btn btn2">Download CV</a>
+                <a href="https://drive.google.com/file/d/1kbFWji_sJ3aKcrHngT_UWhzCclQ2aCCb/view?usp=sharing" class="btn btn2">Download CV</a>
             </div>
             <div class="contact-right">
                 <form>
